storage-api/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: storage-api
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
      app: storage-api
